testsuite/tests/polykinds/T10503.stderr

T10503.hs:8:6: error:
    • Could not deduce: k ~ *
      from the context: Proxy 'KProxy ~ Proxy 'KProxy
        bound by a type expected by the context:
                   (Proxy 'KProxy ~ Proxy 'KProxy) => r
        at T10503.hs:8:6-87
      ‘k’ is a rigid type variable bound by
        the type signature for:
          h :: forall k r. ((Proxy 'KProxy ~ Proxy 'KProxy) => r) -> r
        at T10503.hs:8:6-87
    • In the ambiguity check for ‘h’
      To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
      In the type signature:
        h :: forall k r.
             (Proxy ('KProxy :: KProxy k) ~ Proxy ('KProxy :: KProxy (*)) => r)
             -> r
